updates: dark mode, fixed nav bar, minor updates and made it responsive

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ button{
 #personal-logo{
     width: 100px;
     height: 100px;
-
     filter: invert(0);
 
 }
@@ -35,6 +34,7 @@ p{
 
 section{
     background-color: #f5f5f7;
+    transition: all 300ms ease;
 }
 
 input, textarea{
@@ -82,7 +82,7 @@ input:hover, textarea:focus{
     width: 100%;
     margin: 0 auto;
     max-width: 1100px;
-    padding: 0 12px;
+    padding: 0px 12px;
 }
 
 .click{
@@ -156,6 +156,48 @@ nav,
     transition: all 400ms 200ms;
 }
 
+
+/* DARK THEME */
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para
+{
+ color: white;
+
+
+
+}
+
+.dark-theme section {
+    background-color: #1d1d1f;
+}
+
+.dark-theme #personal-logo {
+    filter: invert(1);
+}
+
+.dark-theme .scroll__icon {
+    border-color: white;
+}
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after
+{
+    background-color: white;
+}
+
+
+.dark-theme .mail__btn{
+    background-color: white;
+    color: #1d1d1f;
+}
+
+
+
+
     /* LANDING PAGE */
     
 #landing-page{
@@ -219,10 +261,12 @@ nav,
     border: none;
     background-color: #1d1d1f;
     color:  #f5f5f7;
-    position: absolute;
+    position: fixed;
     bottom: 29px;
     bottom: 32px;
-    right: 40px
+    right: 40px;
+    z-index: 100;
+    box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.28);
 }
 
 .scroll{
@@ -520,7 +564,8 @@ nav{
 }
 
 .project{
-    padding: 40px;
+    padding: 30px 0;
+    width: 100%;
 }
 
 .project__img{
@@ -555,14 +600,12 @@ nav{
 }
 
 .project__wrapper:hover.project__wrapper--bg{
- opacity: 0.7;
+    opacity: 0.7;
 }
 
-/* .projects__list{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
+.projects__list{
+    /* padding: 200px; */
+}
 
 .project__description{
     position: absolute;
@@ -594,9 +637,9 @@ nav{
     margin-top: 8px ;
 }
 
-.project__description--link{
+.project__description--links{
     color: white;
-    font-size: 16px;
+    font-size: 20px;
     margin-right: 16px;
 
 }
@@ -636,4 +679,106 @@ footer{
 .footer__social--link,
 .footer__copyright {
     color: white;
+}
+
+/* Small phones, tablets, large smart phones */
+
+@media (max-width: 768px){
+
+    /* .header{
+        padding-top: 50px;
+    } */
+
+    .title{
+        font-size: 50px;
+    }
+
+    .header__para{
+        font-size: 20px;
+    }
+    
+    .modal{
+        top: 0;
+        left: 0;
+        transform: none;
+        height: auto;
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+    
+    .modal__half{
+        width: 100%;
+        border-radius: 0;
+    }
+    
+    .undraw{
+        display: none;
+    }
+
+    .project__description--links{
+        color: white;
+        font-size: 10px;
+        margin-right: 16px;
+    
+    }
+}
+
+/* small phones */
+
+@media (max-width: 480px){
+    .title{
+        font-size: 40px;
+    }
+
+    .header__para{
+        font-size: 16px;
+    }
+    
+    .undraw{
+        display: none;
+    }
+
+    .header__para{
+        font-size: 18px;
+    }
+
+    .nav__link:first-child{
+        display: none;
+    }
+
+    .project{
+        padding: 16px 0;
+        width: 100%;
+    }
+
+    .project__description--para{
+        display: none;
+    }
+    .project__description{
+        left: 0;
+        padding: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .project__description--title{
+        font-size: 16px;
+    }
+    .project__description--sub-title{
+        font-size: 8px;
+        margin-bottom: 8px;
+    }
+    
+    .modal__half{
+        padding: 40px;
+    }
+
+    .project__description--links{
+        color: white;
+        font-size: 10px;
+        margin-right: 16px;
+    
+    }
+
+
 }
